--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,7 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="sky_blue">#FF9FD1F9</color>
+    <color name="grass_green">#FF639A63</color>
+    <color name="barn_red">#FFE9565B</color>
 </resources>
