--- a/app/src/main/res/layout/activity_chicken.xml
+++ b/app/src/main/res/layout/activity_chicken.xml
@@ -10,7 +10,7 @@
         android:id="@+id/button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="30dp"
+        android:layout_marginBottom="20dp"
         android:onClick="back"
         android:text="@string/back"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -22,9 +22,9 @@
         android:layout_width="300dp"
         android:layout_height="300dp"
         android:layout_marginTop="20dp"
-        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/chicken" />
 
     <TextView
@@ -33,9 +33,9 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="25dp"
         android:text="@string/chicken"
+        android:textColor="@color/sky_blue"
         android:textSize="30sp"
         android:textStyle="bold"
-        android:textColor="@color/sky_blue"
         app:layout_constraintEnd_toStartOf="@id/volume"
         app:layout_constraintTop_toBottomOf="@id/chicken" />
 
@@ -47,5 +47,24 @@
         app:layout_constraintEnd_toEndOf="@id/chicken"
         app:layout_constraintTop_toBottomOf="@id/chicken"
         app:srcCompat="@drawable/volume" />
+
+    <TextView
+        android:id="@+id/chickenFact"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginStart="55dp"
+        android:layout_marginTop="360dp"
+        android:layout_marginEnd="56dp"
+        android:layout_marginBottom="60dp"
+        android:text="Fun Facts: \n\n * Chickens are the closest living relative of the T-Rex! \n* Some types of chickens can lay blue or green eggs!"
+        android:textColor="@color/sky_blue"
+        android:textSize="15sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.54" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
