--- a/app/src/main/res/layout/activity_chicken.xml
+++ b/app/src/main/res/layout/activity_chicken.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ChickenActivity">
+    tools:context=".AnimalActivity">
 
     <Button
         android:id="@+id/button"
@@ -44,6 +44,7 @@
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:layout_marginEnd="70dp"
+        android:onClick="noise"
         app:layout_constraintEnd_toEndOf="@id/chicken"
         app:layout_constraintTop_toBottomOf="@id/chicken"
         app:srcCompat="@drawable/volume" />
@@ -51,20 +52,15 @@
     <TextView
         android:id="@+id/chickenFact"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:layout_marginStart="55dp"
-        android:layout_marginTop="360dp"
-        android:layout_marginEnd="56dp"
-        android:layout_marginBottom="60dp"
-        android:text="Fun Facts: \n\n * Chickens are the closest living relative of the T-Rex! \n* Some types of chickens can lay blue or green eggs!"
+        android:layout_marginEnd="55dp"
+        android:text="@string/chicken_fun"
         android:textColor="@color/sky_blue"
         android:textSize="15sp"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.54" />
-
+        app:layout_constraintTop_toBottomOf="@id/name"
+        app:layout_constraintBottom_toTopOf="@id/button" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
