--- a/app/src/main/res/layout/activity_submit.xml
+++ b/app/src/main/res/layout/activity_submit.xml
@@ -8,10 +8,11 @@
     tools:context=".SubmitActivity">
 
     <TextView
+        android:id="@+id/thanks"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="100dp"
-        android:text="Thanks for Playing!"
+        android:text="@string/thanks"
         android:textColor="@color/white"
         android:textSize="30sp"
         android:textStyle="bold"
@@ -33,5 +34,17 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
+
+    <TextView
+        android:id="@+id/score"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/score"
+        android:textColor="@color/white"
+        android:textSize="25sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/thanks"
+        app:layout_constraintBottom_toTopOf="@id/button"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
